# libvslogger

./: ChangeLog  Makefile.am  README  configure.ac
include/: Makefile.am  libvslogger.h
libvslogger/: Makefile.am  libvslogger.c
